--- a/main.html
+++ b/main.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Myntra Size Chart</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+            color: #333;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <h2>Myntra Size Chart</h2>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Size</th>
+                <th>Bust (in)</th>
+                <th>Waist (in)</th>
+                <th>Hips (in)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>XS</td>
+                <td>32</td>
+                <td>24</td>
+                <td>34</td>
+            </tr>
+            <tr>
+                <td>S</td>
+                <td>34</td>
+                <td>26</td>
+                <td>36</td>
+            </tr>
+            <tr>
+                <td>M</td>
+                <td>36</td>
+                <td>28</td>
+                <td>38</td>
+            </tr>
+            <tr>
+                <td>L</td>
+                <td>38</td>
+                <td>30</td>
+                <td>40</td>
+            </tr>
+            <tr>
+                <td>XL</td>
+                <td>40</td>
+                <td>32</td>
+                <td>42</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
-
 </html>
