--- a/main.html
+++ b/main.html
@@ -3,69 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myntra Size Chart</title>
+    <title>Size Chart</title>
     <style>
         table {
-            border-collapse: collapse;
             width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+            font-size: 16px;
+            text-align: left;
         }
         th, td {
+            padding: 12px;
             border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
         }
         th {
-            background-color: #f2f2f2;
-            color: #333;
+            background-color: #f4f4f4;
+        }
+        caption {
+            font-size: 1.5em;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
-
-    <h2>Myntra Size Chart</h2>
-
     <table>
+        <caption>Size Chart</caption>
         <thead>
             <tr>
                 <th>Size</th>
-                <th>Bust (in)</th>
-                <th>Waist (in)</th>
-                <th>Hips (in)</th>
+                <th>Chest (inches)</th>
+                <th>Waist (inches)</th>
+                <th>Hip (inches)</th>
+                <th>Length (inches)</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>XS</td>
-                <td>32</td>
-                <td>24</td>
-                <td>34</td>
+                <td>32-34</td>
+                <td>26-28</td>
+                <td>34-36</td>
+                <td>27</td>
             </tr>
             <tr>
                 <td>S</td>
-                <td>34</td>
-                <td>26</td>
-                <td>36</td>
+                <td>34-36</td>
+                <td>28-30</td>
+                <td>36-38</td>
+                <td>28</td>
             </tr>
             <tr>
                 <td>M</td>
-                <td>36</td>
-                <td>28</td>
-                <td>38</td>
+                <td>36-38</td>
+                <td>30-32</td>
+                <td>38-40</td>
+                <td>29</td>
             </tr>
             <tr>
                 <td>L</td>
-                <td>38</td>
+                <td>38-40</td>
+                <td>32-34</td>
+                <td>40-42</td>
                 <td>30</td>
-                <td>40</td>
             </tr>
             <tr>
                 <td>XL</td>
-                <td>40</td>
-                <td>32</td>
-                <td>42</td>
+                <td>40-42</td>
+                <td>34-36</td>
+                <td>42-44</td>
+                <td>31</td>
             </tr>
         </tbody>
     </table>
-
 </body>
 </html>
