--- a/main.html
+++ b/main.html
@@ -1,79 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Size Chart</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            font-size: 16px;
-            text-align: left;
-        }
-        th, td {
-            padding: 12px;
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
-        caption {
-            font-size: 1.5em;
-            margin: 10px 0;
-        }
-    </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width-device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles.css">
+	<title>Size Chart</title>
+	<style>
+		th,td,table{
+			border=1px;
+			border-color:black;
+			border-style:solid;
+			border-collapse:collapse;
+		}
+		th{
+			text-align = left;
+		}
+
+		td{
+			text-align = right;
+		}
+
+		table{
+			width = 50%;
+		}
+	</style>
 </head>
+
 <body>
-    <table>
-        <caption>Size Chart</caption>
-        <thead>
-            <tr>
-                <th>Size</th>
-                <th>Chest (inches)</th>
-                <th>Waist (inches)</th>
-                <th>Hip (inches)</th>
-                <th>Length (inches)</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>XS</td>
-                <td>32-34</td>
-                <td>26-28</td>
-                <td>34-36</td>
-                <td>27</td>
-            </tr>
-            <tr>
-                <td>S</td>
-                <td>34-36</td>
-                <td>28-30</td>
-                <td>36-38</td>
-                <td>28</td>
-            </tr>
-            <tr>
-                <td>M</td>
-                <td>36-38</td>
-                <td>30-32</td>
-                <td>38-40</td>
-                <td>29</td>
-            </tr>
-            <tr>
-                <td>L</td>
-                <td>38-40</td>
-                <td>32-34</td>
-                <td>40-42</td>
-                <td>30</td>
-            </tr>
-            <tr>
-                <td>XL</td>
-                <td>40-42</td>
-                <td>34-36</td>
-                <td>42-44</td>
-                <td>31</td>
-            </tr>
-        </tbody>
-    </table>
+
+	<h1>Myntra Size Chart</h1>
+	<hr>
+	<table border="1px" width="50%" >
+		<thead>
+			<tr >
+				<th>Part</th>
+				<th>XS</th>
+				<th>S</th>
+				<th>M</th>
+				<th>L</th>
+				<th>XL</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>Waist</td>
+				<td>25</td>
+				<td>28</td>
+				<td>30</td>
+				<td>31</td>
+				<td>32</td>
+			</tr>
+
+			<tr>
+				<td>Chest</td>
+				<td>34</td>
+				<td>34</td>
+				<td>38</td>
+				<td>40</td>
+				<td>41</td>
+			</tr>
+
+			<tr>
+				<td>Sleeve</td>
+				<td>23</td>
+				<td>24</td>
+				<td>24</td>
+				<td>25</td>
+				<td>25</td>
+			</tr>
+		</tbody>
+	</table>
+
+	
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
